force-app/main/default/objects/scaleMatters_Excluded_Records__c/scaleMatters_Excluded_Records__c.object-meta.xml
<CustomObject>
    <description>These are records that would want to be excluded from scaleMatters. This can be test records or simply records you do not want to sync back to scaleMatters.</description>
    <label>scaleMatters Excluded Record</label>
    <nameField>
        <displayFormat>sMER# - {00000000}</displayFormat>
        <label>scaleMatters Excluded Records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>scaleMatters Excluded Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>