force-app/main/default/objects/scaleMatters_Excluded_Records__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link to a Account you want to exclude from scaleMatters</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>scaleMatters Excluded Records</relationshipLabel>
    <relationshipName>scaleMatters_Excluded_Records</relationshipName>
    <type>Lookup</type>
</CustomField>