force-app/main/default/objects/scaleMatters_Excluded_Records__c/fields/Account_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Count__c</fullName>
    <description>Number of related Account</description>
    <formula>IF(
    NOT(ISBLANK(Account__c)),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>