force-app/main/default/objects/scaleMatters_Excluded_Records__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link to a Contact you want to exclude from scaleMatters</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>scaleMatters Excluded Records</relationshipLabel>
    <relationshipName>scaleMatters_Excluded_Records</relationshipName>
    <type>Lookup</type>
</CustomField>