force-app/main/default/objects/scaleMatters_Excluded_Records__c/fields/Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Count__c</fullName>
    <description>Number of related Contact</description>
    <formula>IF(
    NOT(ISBLANK(Contact__c)),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>