force-app/main/default/objects/scaleMatters_Excluded_Records__c/fields/Excluded_Record__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Record__c</fullName>
    <description
  >Used to link to record within the List view and Compact Layout</description>
    <formula>IF(
    NOT(ISBLANK(Account__c)),
        HYPERLINK(&quot;/&quot; &amp; Account__r.Id, Account__r.Name, &quot;_self&quot;),
IF(
    NOT(ISBLANK(Contact__c)),
        HYPERLINK(&quot;/&quot; &amp; Contact__r.Id, Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName , &quot;_self&quot;),
IF(
    NOT(ISBLANK(Opportunity__c)),
        HYPERLINK(&quot;/&quot; &amp; Opportunity__r.Id, Opportunity__r.Name, &quot;_self&quot;),
IF(
    NOT(ISBLANK(Lead__c)),
        HYPERLINK(&quot;/&quot; &amp; Lead__r.Id, Lead__r.FirstName &amp; &quot; &quot; &amp; Lead__r.LastName , &quot;_self&quot;),
&quot;No Record&quot;
            )
        )
    )
)</formula>
    <label>Excluded Record</label>
    <type>Text</type>
</CustomField>