force-app/main/default/objects/scaleMatters_Excluded_Records__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link to a Lead you want to exclude from scaleMatters</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>scaleMatters Excluded Records</relationshipLabel>
    <relationshipName>scaleMatters_Excluded_Records</relationshipName>
    <type>Lookup</type>
</CustomField>