force-app/main/default/objects/scaleMatters_Excluded_Records__c/fields/Lead_Count__c.field-meta.xml
<CustomField>
    <fullName>Lead_Count__c</fullName>
    <description>Number of related Lead</description>
    <formula>IF(
    NOT(ISBLANK(Lead__c)),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>