force-app/main/default/objects/scaleMatters_Excluded_Records__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Used to link to a Opportunity you want to exclude from scaleMatters</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>scaleMatters Excluded Records</relationshipLabel>
    <relationshipName>scaleMatters_Excluded_Records</relationshipName>
    <type>Lookup</type>
</CustomField>