force-app/main/default/objects/scaleMatters_Excluded_Records__c/fields/Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Count__c</fullName>
    <description>Number of related Opportunity</description>
    <formula>IF(
    NOT(ISBLANK(Opportunity__c)),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>