force-app/main/default/objects/scaleMatters_Excluded_Records__c/validationRules/Only_One_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_One_Record</fullName>
    <active>true</active>
    <description>Not allowing a user to add more than one excluded record</description>
    <errorConditionFormula>IF(
    (Account_Count__c + Contact_Count__c + Lead_Count__c + Opportunity_Count__c) &gt; 1,
    TRUE,
    FALSE
)</errorConditionFormula>
    <errorMessage>You can only add one record at a time!</errorMessage>
</ValidationRule>